# OOPS22-Names-Base

./: CMakeLists.txt  Name.cpp  Name.hpp  NameDemo.cpp
